# djmgmt

./: .gitignore  CLAUDE.md  E2E Test Plan.md  README.md  pyproject.toml  pyrightconfig.json
dev/: E2E Config Refactoring.md  E2E Test Environment.md  E2E Test Plan.md  Module Structuring.md
dev/E2E Testing/: E2E Config Refactoring.md  TODOs.md
docs/: fresh-sync-runbook.md
e2e/: Dockerfile.test  docker-compose.test.yml  fixture_generator.py  generate_fixtures.sh  test_integration.py
e2e/fixtures/collections/: test-collection.xml
e2e/fixtures/manifests/: dummy-files.json
e2e/fixtures/music/: track2.aiff
e2e/rsync/: Dockerfile  rsyncd.conf
src/djmgmt/: __init__.py  batch_general.py  common.py  config.py  constants.py  dev.py  encode.py  genre.py  library.py  music.py  playlist.py  restore_metadata.py  subsonic_client.py  sync.py  tags.py  tags_info.py  tags_sort.py
src/djmgmt/ui/: __init__.py  app.py
src/djmgmt/ui/components/: __init__.py  module_tab.py  (+2 more)
state/: collection-template.xml  sync_state.txt  test-unplayed.xml
state/encode_tracks/: size-diff.tsv
state/output/: collection_track_identifiers.txt  diff-library-corevega.txt  missing-art-corevega.txt  missing-art.txt  processed-collection-manual-test.xml  processed-collection-test-rb-minimal-compat.xml  processed-collection.xml  server_track_identifiers.txt  track_identifiers.txt
state/output/encode/: size-diff.tsv
tests/: __init__.py  fixtures.py  test_common.py  test_encode.py  test_library.py  test_music.py  test_playlist.py  test_sync.py  test_tags.py  test_tags_info.py  test_tags_sort.py
(+13 files in other folders)
