[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "djmgmt"
version = "0.1.0"
description = "DJ management toolkit for organizing, encoding, tagging, and syncing music libraries"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Zach VP"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "mutagen>=1.45.0",
    "Pillow>=9.0.0",
    "imagehash>=4.3.0",
    "requests>=2.28.0",
    "keyring>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["djmgmt*"]
exclude = ["tests*"]

[tool.pyright]
include = ["src"]
exclude = ["src/djmgmt/audacity_script_sample.py"]
typeCheckingMode = "basic"
